[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "biosnicar"
authors = [{ name = "BioSNICAR team", email = "biosnicar@proton.me" }]
description = "Snow and ice albedo modelling"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
    "dask",
    "click",
    "matplotlib",
    "miepython",
    "pandas",
    "scipy",
    "seaborn",
    "xarray",
    "plotnine",
    "statsmodels",
]

[project.optional-dependencies]
test = [
    "bandit[toml]",
    "ruff",
    "pylint",
    "pylint_junit",
    "pytest-cov",
    "pytest",
    "pytest-check",
    "coverage-badge",
    "pytest-github-actions-annotate-failures",
    "shellcheck-py",
    "scipy",
    "mypy",
]
dev = ["bump2version"]

[project.urls]
Documentation = "https://biosnicar-go-py.readthedocs.io/en/latest/"
Source = "https://github.com/jmcook1186/biosnicar-py"
Tracker = "https://github.com/jmcook1186/biosnicar-py/issues"

[tool.flit.module]
name = "biosnicar"


[tool.bumpversion]
allow_dirty = false
commit = true
tag = true
current_version = "2.1.0"
message = "Bump version: {current_version} → {new_version}"
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "biosnicar/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "{new_version}"
